--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,35 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box;
+}
+:root {
+  --blue: #148bff;
+  --darkblue: #237ed7;
+  --white: #ffffff;
+  --black: #333333;
+  --grey: #cccccc;
+  --green: #40ba42;
+  --red: #f25656;
+}
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  color: var(--black);
+}
+
+.container {
+  display: block;
+  width: 100%;
+  max-width: 1600px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+input:required {
+  box-shadow: none;
+}
+
+input:invalid {
+  box-shadow: 0;
+}
